--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div id='map'></div>
 <script>
-mapboxgl.accessToken = 'pk.eyJ1Ijoic2lqaWFwZWkiLCJhIjoiY2psZ21zdmNiMTh5ejNxczVkMzRqYWNvZCJ9.Kb1Bxc7Q6Jzkwdgl3ie0dg';
+mapboxgl.accessToken = 'pk.eyJ1Ijoic2lqaWFwZWkiLCJhIjoiY2psZ210eDJ2MTllMjNwcGJpYzMwNjdwMyJ9.sdmag--x0uKOL2IQZwyISw';
 var map = new mapboxgl.Map({
     container: 'map', // container id
     style: 'mapbox://styles/mapbox/light-v9', // stylesheet location
@@ -49,7 +49,7 @@ map.on('load',function(){
                        [1,50000]
                     ]
                },
-               'fill-extrusion-opacity': 1
+               'fill-extrusion-opacity': 0.9
            }
     });
 });
