--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ map.on('load',function(){
                        ]
                },
                'fill-extrusion-height':{
-                   'property':'Difference',
+                   'property':'1_18-30M',
                    "stops":[
                        [0.2,0],
                        [1,50000]
