--- a/index.html
+++ b/index.html
@@ -1,61 +1,97 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8' />
-    <title>MyMap</title>
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.js'></script>
-    <script src='./data.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.css' rel='stylesheet' />
-    <style>
-        body { margin:0; padding:0; }
-        #map { position:absolute; top:0; bottom:0; width:100%; }
-    </style>
+<title>MyMap</title>
+<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="js/jquery.min.js"></script>
+<!-- Custom Theme files -->
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/demo1.css" rel="stylesheet" type="text/css" media="all" />
+<!-- Custom Theme files -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<!--webfont-->
+<link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200,300,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+		<!-- JavaScript includes -->
+		<script src="js/ipresenter.packed.js"></script>
+		<script>
+			$(document).ready(function(){
+				$('#ipresenter').iPresenter({
+					timerPadding: -1,
+					controlNav: true,
+					controlNavThumbs: true,
+					controlNavNextPrev: false
+				});
+			});
+		</script>
+	    <script type="text/javascript" src="js/move-top.js"></script>
+<script type="text/javascript" src="js/easing.js"></script>
+<script type="text/javascript">
+			jQuery(document).ready(function($) {
+				$(".scroll").click(function(event){		
+					event.preventDefault();
+					$('html,body').animate({scrollTop:$(this.hash).offset().top},1200);
+				});
+			});
+		</script>
 </head>
 <body>
+	<!-- header-section-starts -->
+	<div class="user-desc">
+		</div>
+		<div class="header">
+		<div class="header-top">
+			<div class="container">
+				<div class="top-menu">
+				  <span class="menu"> </span>
+					<ul class="cl-effect-15">
+						<li><a class="active" href="index.html">HOME</a></li>
+						<li><a href="map 1.html" data-hover="map 1">map 1</a></li>
+						<li><a href="map 2.html" data-hover="map 2">map 2</a></li>
+						<li><a href="map 3.html" data-hover="map 3">map 3</a></li>
+						<li><a href="map 4.html" data-hover="map 4">map 4</a></li>
+					</ul>
+				</div>
+				 <!--script-nav-->
+				<script>
+				$("span.menu").click(function(){
+				$(".top-menu ul").slideToggle("slow" , function(){
+				});
+				});
+				</script>
+				<!--script-nav-->
+				<div class="clearfix"></div>
+			</div>
+		</div>
+			<div class="slider">
+		<div id="ipresenter">
+			
 
-<div id='map'></div>
-<script>
-mapboxgl.accessToken = 'pk.eyJ1Ijoic2lqaWFwZWkiLCJhIjoiY2psZ210eDJ2MTllMjNwcGJpYzMwNjdwMyJ9.sdmag--x0uKOL2IQZwyISw';
-var map = new mapboxgl.Map({
-    container: 'map', // container id
-    style: 'mapbox://styles/mapbox/light-v9', // stylesheet location
-    center: [151.004105, -33.813002], // starting position [lng, lat]
-    pitch: 45,
-    bearing: -17.6,
-    zoom: 9 // starting zoom
-});
-map.on('load',function(){
-    
-    map.addLayer({
-        "id":"data",
-        "type": "fill-extrusion",
-        "source":{
-            'type':'geojson',
-            'data':data
-        },
-           'paint':{
-               'fill-extrusion-color':{
-                   'property':'2016',
-                   "stops":[
-                        [0, 'Yellow '],
-                        [50, 'Orange'],
-                        [138, 'Red'],
-                        [365, 'Darkred']
-                    ] 
-               },
-               'fill-extrusion-height':{
-                   'property':'0-17M',
-                   "stops":[
-                    	[0.2, 0],
-                    	[1, 50000]
-                    ] 
-               },
-               'fill-extrusion-opacity': 0.9
-           }
-    });
-});
+			
+
+			
+		</div>
+	</div>
+	</div>
+	<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-32024393-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
 </script>
+<!-- header-section-ends -->
+<!-- content-section-starts -->
+	<!-- footer-section-ends -->
 
 </body>
 </html>
